web/styles/portico/portico.css
/* ... */
.digest-email-html {
    padding: 20px;
    background-color: hsl(0deg 0% 100%);
    border-radius: 5px;
}

.app.help {
    display: inline-flex;

    box-shadow: 0 -20px 50px hsl(0deg 0% 0% / 4%);

    color: hsl(0deg 0% 27%);

    .hamburger {
        display: none;
    }
}

.help {
    .app-main {
        padding: 0;
    }

    /* Markdown processor generates lots of spurious <p></p> */
    & p:empty {
        margin: 0;
    }

    .sidebar {
        width: 300px;
        z-index: 1;
        /* 100vh - navbar - paddingTop - paddingBottom - bottomNav */
        height: calc(100vh - 59px);

        border-right: 1px solid hsl(219deg 10% 97%);
        position: fixed;

        background-color: hsl(153deg 32% 55%);
        color: hsl(0deg 0% 100%);

        -webkit-overflow-scrolling: touch;

        --help-sidebar-padding: 20px;
        --help-sidebar-indent: 12px;

        .content {
            padding: 10px var(--help-sidebar-padding);
        }

        & h1 {
            font-weight: 400;
            font-size: 1.25em;
            line-height: 1.5;
            margin-bottom: 0;

            &.home-link {
                font-size: 1em;
                margin-top: 20px;
                margin-bottom: 17px;

                & a::before {
                    display: inline-block;
                    font: normal normal normal 14px/1 FontAwesome;
                    font-size: inherit;

                    content: "\f0d9";
                    margin-right: 10px;
                }
            }
        }

        & h1,
        h2,
        h3 {
            &:not(:first-of-type) {
                margin-top: 0;
            }

            & a {
                color: inherit;
                display: block;

                /* Extend to entire width of sidebar, not just link area */
                margin-left: calc(0px - var(--help-sidebar-padding));
                margin-right: calc(0px - var(--help-sidebar-padding));
                padding-left: calc(var(--help-sidebar-padding));
                padding-right: calc(var(--help-sidebar-padding));
            }
        }

        & h2 {
            font-weight: 400;
            font-size: 1.1em;
            line-height: 1.05;
            margin-bottom: 5px;
        }

        &.slide h2 {
            cursor: pointer;

            &::before {
                display: block;
                font: normal normal normal 14px/1 FontAwesome;
                font-size: inherit;

                content: "\f107";
                margin-right: 5px;
                float: right;

                opacity: 0.5;
            }
        }

        & ul {
            margin: 5px 0 10px var(--help-sidebar-indent);
        }

        &.slide ul {
            margin-left: 19px;
            display: none;
        }

        & li {
            list-style-type: none;
            font-size: 0.95em;
            font-weight: 400;
            line-height: 1.7;

            cursor: pointer;

            & a {
                color: inherit;
                display: block;

                /* Extend to entire width of sidebar, not just link area */
                margin-left: calc(
                    0px - var(--help-sidebar-padding) -
                        var(--help-sidebar-indent)
                );
                margin-right: calc(0px - var(--help-sidebar-padding));
                padding-left: calc(
                    var(--help-sidebar-padding) + var(--help-sidebar-indent)
                );
                padding-right: calc(var(--help-sidebar-padding));
            }
        }

        & a {
            &.highlighted {
                background-color: hsl(152deg 40% 42%);

                /* Don't show the focus outline for the highlighted page. */
                outline: 0;
            }
        }
    }
}

.help .markdown {
    background-color: hsl(0deg 0% 100%);
    width: calc(100vw - 300px);
    height: calc(100% - 59px);
    margin-left: 300px;

    & :target {
        scroll-margin-top: 59px;
    }
    /* Highlight the headings as well as the first child
      of any targeted div, as in the API documentation. */
    & h1:target,
    & h2:target,
    & h3:target,
    & h4:target,
    & h5:target,
    & h6:target,
    & div:target > :first-child {
        /* Increase the highlighted space around the text... */
        padding: 6px 8px;
        border-radius: 7px 7px 0 0;
        /* ...but maintain apparent top and bottom margin;
        pull left and right into the gutter. */
        margin: 20px -8px 10px;
        /* Derive highlight color from sidebar, here with 30% alpha */
        background-color: hsl(152deg 70% 50% / 25%);
    }
}

.help-center ol,
.portico-landing.integrations ol {
    margin-left: 0;
}

.title {
    font-family: Helvetica, sans-serif;
    font-size: 100px;
    font-weight: bold;
    margin-top: 50px;
    margin-bottom: 60px;
}

.digest-page-title {
    text-align: center;
    font-weight: 400;
}

.thanks-page div {
    text-align: center;
}

.lead {
    font-weight: bold;
}

.pitch {
    width: 600px;
    max-width: 100%;
}

.help-inline {
    font-weight: 400;
    font-size: 0.9rem;

    &.text-error {
        color: hsl(1.1deg 44.7% 50.4%);
    }
}

a.title {
    color: hsl(0deg 0% 0%);

    &:hover {
        color: hsl(0deg 0% 50%);
        text-decoration: none;
    }
}

.fakecontrol {
    padding-top: 5px;
    font-weight: bold;
}

img.screenshot {
    /* This makes it so screenshots are still shown
    even if they are larger than their span. */
    max-width: 100%;
}

#pw_strength {
    /* Same width as a Bootstrap default text <input> with padding */
    width: 220px;
    height: 8px;
}

#registration #pw_strength {
    width: 325px;
    margin: 7px auto 0;
}

.def::before {
    content: " - ";
}

.platform-icon {
    width: 33%;
}

.portico-page h1 {
    font-weight: 300;
}

label.text-error {
    display: inline;

    padding-left: 5px;
}
/* ... */

